apps/lonk/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: lonk-api-auth
  namespace: lonk
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
spec:
  basicAuth:
    secret: lonk-basic-auth
