apps/lonk/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lonk
  namespace: lonk
spec:
  selector:
    app: lonk
  ports:
    - port: 80
      targetPort: 8000
